--- a/xm-starter/pom.xml
+++ b/xm-starter/pom.xml
@@ -4,19 +4,45 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>xm-starter</artifactId> 
   <packaging>jar</packaging>
-  <name>xm-starter</name>
-  <parent>
-    <groupId>com.qingqinkj.mdp</groupId>
-    <artifactId>mdp-boot-starter-parent</artifactId>
-    <version>M.1.0.0-RELEASE</version>
-  </parent> 
-  <dependencies>   
-		    <dependency>
-		      <groupId>com.qingqinkj.xm</groupId>
-		      <artifactId>xm</artifactId>
-		      <version>${mdp.version}</version>
-		    </dependency> 
-  </dependencies> 
+  <name>唛盟云-项目管理系统服务端启动器</name>
+    <parent>
+        <groupId>com.qingqinkj.mmcloud</groupId>
+        <artifactId>xm-server</artifactId>
+        <version>M.1.0.0-RELEASE</version>
+    </parent>
+  <dependencies>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-actuator</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-webflux</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+      </dependency>
+  </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
   <build>
   	<plugins>
   	  		<!-- -->
@@ -36,8 +62,16 @@
           <configuration>
             <mainClass>${start-class}</mainClass>
           </configuration>
-    	</plugin> 
+    	</plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <version>2.8.2</version>
+            <configuration>
+                <skip>true</skip>
+            </configuration>
+        </plugin>
   	</plugins>
   </build>
-  <description>项目管理系统微服务启动器</description>
+  <description>唛盟云-项目管理系统微服务启动器</description>
 </project>
