--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<skipTests>true</skipTests>
 		<docker.host>http://192.168.3.101:2375</docker.host>
 		<docker.maven.plugin.version>1.2.2</docker.maven.plugin.version>
+		<docker.image.prefix>mmcloud</docker.image.prefix>
 	</properties>
 	<modules>
 		<module>xm-core</module>
@@ -116,34 +117,6 @@
 							</goals>
 						</execution>
 					</executions>
-				</plugin>
-				<plugin>
-					<groupId>com.spotify</groupId>
-					<artifactId>docker-maven-plugin</artifactId>
-					<version>${docker.maven.plugin.version}</version>
-					<!--<executions>-->
-					<!--<execution>-->
-					<!--<id>build-image</id>-->
-					<!--<phase>package</phase>-->
-					<!--<goals>-->
-					<!--<goal>build</goal>-->
-					<!--</goals>-->
-					<!--</execution>-->
-					<!--</executions>-->
-					<configuration>
-						<imageName>mmcloud/${project.artifactId}:${project.version}</imageName>
-						<dockerHost>${docker.host}</dockerHost>
-						<baseImage>java:8</baseImage>
-						<entryPoint>["java", "-jar", "-Dspring.profiles.active=prod","/${project.build.finalName}.jar"]
-						</entryPoint>
-						<resources>
-							<resource>
-								<targetPath>/</targetPath>
-								<directory>${project.build.directory}</directory>
-								<include>${project.build.finalName}.jar</include>
-							</resource>
-						</resources>
-					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
