加入mdp-msg-client    mdp-micro-client两个模块，用于远程调用微服务或者推送im消息等

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
 		</dependency>
 		<dependency>
 			<groupId>com.qingqinkj.mdp</groupId>
+			<artifactId>mdp-micro-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.qingqinkj.mdp</groupId>
+			<artifactId>mdp-msg-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.qingqinkj.mdp</groupId>
 			<artifactId>mdp-core</artifactId>
 		</dependency>
 		<dependency>
