添加权限控制

--- a/xm-core/src/main/resources/application-dev.properties
+++ b/xm-core/src/main/resources/application-dev.properties
@@ -75,7 +75,11 @@ mdp.arc.file-download-base-uri=arc/
 mdp.ac.account-key=LFt1f0EtISBDkqVk9H90rSKVixXhw9eDECClaly2Mj5
 mdp.ac.account-check-sign=true
 ###end ac##########
-  
+#mdp.auth.ips=ip1,ip2,ip3,授权ip地址列表，如果非授权ip应用只允许使用24小时
+mdp.auth.ips=172.18.153.152
+mdp.auth.qx-regist-url=/sys/sys/sys/qx/autoRegist
+mdp.audit.audit-log-url=/audit/audit/audit/base/operLog/add
+mdp.platform-branch-id=platform-branch-001
 
 ##begin 商户相关配置###顶级商户###########################################################
 mdp.topMech.mechId=m1000
