--- a/xm-starter/src/main/resources/application-m1prod.properties
+++ b/xm-starter/src/main/resources/application-m1prod.properties
@@ -34,9 +34,15 @@ spring.jackson.parser.allow_single_quotes=true
 
 
 #配置图片文件上传下载的相关参数，如果此次配置将覆盖数据库系统参数中的 arcImageUploadRootPath 及 arcImageDownloadBaseUri两个参数
-mdp.arc.image-upload-root-path=/home/keyun/mall/arc/image
-mdp.arc.image-download-base-uri=arc/
-mdp.arc.file-upload-root-path=/home/keyun/mall/arc/files
+#mdp.arc.image-upload-root-path=/home/keyun/mall/arc/image
+#mdp.arc.image-download-base-uri=arc/
+#mdp.arc.file-upload-root-path=/home/keyun/mall/arc/files
+
+#mdp.auth.ips=ip1,ip2,ip3,授权ip地址列表，如果非授权ip应用只允许使用24小时
+mdp.auth.ips=172.18.153.152
+mdp.auth.qx-regist-url=/sys/sys/sys/qx/autoRegist
+mdp.audit.audit-log-url=/audit/audit/audit/base/operLog/add
+mdp.platform-branch-id=platform-branch-001
 
 #限制文件上传大小
 spring.http.multipart.maxFileSize=10Mb
