增加mdp模块扫码

--- a/xm-bootstrap/pom.xml
+++ b/xm-bootstrap/pom.xml
@@ -17,21 +17,15 @@
           <version>${mdp.version}</version>
       </dependency>
       <dependency>
+          <groupId>com.mdp</groupId>
+          <artifactId>mdp-oauth2-client-cloud</artifactId>
+          <version>${mdp.version}</version>
+      </dependency>
+      <dependency>
           <groupId>com.xm</groupId>
           <artifactId>xm-core</artifactId>
       </dependency>
   </dependencies>
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
   <build>
   	<plugins>
         <plugin>
