--- a/xm-core/src/main/resources/application-dev.properties
+++ b/xm-core/src/main/resources/application-dev.properties
@@ -81,6 +81,43 @@ mdp.auth.qx-regist-url=/sys/sys/sys/qx/autoRegist
 mdp.audit.audit-log-url=/audit/audit/audit/base/operLog/add
 mdp.platform-branch-id=platform-branch-001
 
+
+
+# mdp平台授权验证服务器访问地址 cloud环境下换成 http://gate，本地调试如果不起验证服务器，可改为 https://www.qingqinkj.com/api/m1/oauth2/oauth2
+mdp.oauth2.server.uri=http://134.175.57.249:7000
+# 客户端必须在数据库表adm.oauth_client_details中配置，否则无法访问
+
+# 下面配置 password 模式
+spring.security.oauth2.client.registration.password-client.provider=def-oauth-server
+spring.security.oauth2.client.registration.password-client.client-id=${spring.application.name}
+spring.security.oauth2.client.registration.password-client.client-secret= ${spring.application.name}-8888
+spring.security.oauth2.client.registration.password-client.authorization-grant-type= password
+spring.security.oauth2.client.registration.password-client.scope= all
+
+# 下面配置 client_credentials 模式
+spring.security.oauth2.client.registration.def-client.provider=def-oauth-server
+spring.security.oauth2.client.registration.def-client.client-id=${spring.application.name}
+spring.security.oauth2.client.registration.def-client.client-secret= ${spring.application.name}-8888
+spring.security.oauth2.client.registration.def-client.authorization-grant-type= client_credentials
+spring.security.oauth2.client.registration.def-client.scope= all
+
+# 下面配置authorization_code模式
+spring.security.oauth2.client.registration.code-client.provider=def-oauth-server
+spring.security.oauth2.client.registration.code-client.client-id=${spring.application.name}
+spring.security.oauth2.client.registration.code-client.client-secret= ${spring.application.name}-8888
+spring.security.oauth2.client.registration.code-client.authorization-grant-type= authorization_code
+# 授权码模式下需要配置重定向地址
+spring.security.oauth2.client.registration.code-client.redirect-uri= ${messages.base-uri}/authorized
+spring.security.oauth2.client.registration.code-client.scope= all
+
+# 授权码方式获取code
+spring.security.oauth2.client.provider.def-oauth-server.authorization-uri= ${mdp.oauth2.server.uri}/oauth2/authorize
+# 获取token接口
+spring.security.oauth2.client.provider.def-oauth-server.token-uri= ${mdp.oauth2.server.uri}/oauth2/token
+
+# 资源服务器
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${mdp.oauth2.server.uri}/oauth2/jwks
+
 ##begin 商户相关配置###顶级商户###########################################################
 mdp.topMech.mechId=m1000
 mdp.topMech.userid=m1000
