--- a/xm-bootstrap/src/main/resources/application-dev.properties
+++ b/xm-bootstrap/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 spring.application.name=xm
 
 server.port=7067
-server.context-path=/${spring.application.name}
+#server.context-path=/${spring.application.name}
 #session失效时间 秒
 server.session.timeout=43200
 spring.session.store-type=none
@@ -13,7 +13,7 @@ spring.cloud.inetutils.preferredNetworks[1]=^172\.
 #eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 #eureka.instance.prefer-ip-address=true
 
-spring.cloud.consul.host=localhost
+spring.cloud.consul.host=134.175.57.249
 spring.cloud.consul.port=8500
 
 
@@ -42,6 +42,42 @@ mdp.arc.file-upload-root-path=E:/arc/files
 spring.http.multipart.maxFileSize=10Mb
 spring.http.multipart.maxRequestSize=10Mb
 
+
+# mdp平台授权验证服务器访问地址 cloud环境下换成 http://gate，本地调试如果不起验证服务器，可改为 https://www.qingqinkj.com/api/m1/oauth2/oauth2
+mdp.oauth2.server.uri=http://134.175.57.249:7000
+# 客户端必须在数据库表adm.oauth_client_details中配置，否则无法访问
+
+# 下面配置 password 模式
+spring.security.oauth2.client.registration.password-client.provider=def-oauth-server
+spring.security.oauth2.client.registration.password-client.client-id=${spring.application.name}
+spring.security.oauth2.client.registration.password-client.client-secret= ${spring.application.name}-8888
+spring.security.oauth2.client.registration.password-client.authorization-grant-type= password
+spring.security.oauth2.client.registration.password-client.scope= all
+
+# 下面配置 client_credentials 模式
+spring.security.oauth2.client.registration.def-client.provider=def-oauth-server
+spring.security.oauth2.client.registration.def-client.client-id=${spring.application.name}
+spring.security.oauth2.client.registration.def-client.client-secret= ${spring.application.name}-8888
+spring.security.oauth2.client.registration.def-client.authorization-grant-type= client_credentials
+spring.security.oauth2.client.registration.def-client.scope= all
+
+# 下面配置authorization_code模式
+spring.security.oauth2.client.registration.code-client.provider=def-oauth-server
+spring.security.oauth2.client.registration.code-client.client-id=${spring.application.name}
+spring.security.oauth2.client.registration.code-client.client-secret= ${spring.application.name}-8888
+spring.security.oauth2.client.registration.code-client.authorization-grant-type= authorization_code
+# 授权码模式下需要配置重定向地址
+spring.security.oauth2.client.registration.code-client.redirect-uri= ${messages.base-uri}/authorized
+spring.security.oauth2.client.registration.code-client.scope= all
+
+# 授权码方式获取code
+spring.security.oauth2.client.provider.def-oauth-server.authorization-uri= ${mdp.oauth2.server.uri}/oauth2/authorize
+# 获取token接口
+spring.security.oauth2.client.provider.def-oauth-server.token-uri= ${mdp.oauth2.server.uri}/oauth2/token
+
+# 资源服务器
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${mdp.oauth2.server.uri}/oauth2/jwks
+
 #配置数据源
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.jdbc-url=jdbc:mysql://123.207.117.5:3306/arc?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&serverTimezone=CTT
@@ -67,7 +103,7 @@ mdp.sms.app-secret=4b0659a2ee8ba4e54a570515fda94aef
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=10.0.0.17
+spring.redis.host=134.175.57.249
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
