--- a/xm-core/pom.xml
+++ b/xm-core/pom.xml
@@ -13,6 +13,12 @@
   </parent>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>com.mdp</groupId>
+			<artifactId>mdp-oauth2-client</artifactId>
+			<version>${mdp.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>net.coobird</groupId>
 			<artifactId>thumbnailator</artifactId>
@@ -43,6 +49,11 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.11.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.59</version>
 		</dependency>
 
 	</dependencies>
