增加mdp模块扫码

--- a/xm-core/pom.xml
+++ b/xm-core/pom.xml
@@ -16,6 +16,11 @@
 
 		<dependency>
 			<groupId>com.mdp</groupId>
+			<artifactId>mdp-boot-starter</artifactId>
+			<version>${mdp.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.mdp</groupId>
 			<artifactId>mdp-oauth2-client</artifactId>
 			<version>${mdp.version}</version>
 		</dependency>
