增加mdp模块扫码

--- a/xm-bootstrap/src/main/resources/application-m1prod.properties
+++ b/xm-bootstrap/src/main/resources/application-m1prod.properties
@@ -30,7 +30,9 @@ spring.jackson.serialization.indent_output=true
 spring.jackson.serialization.fail_on_empty_beans=false
 spring.jackson.deserialization.fail_on_unknown_properties=false
 spring.jackson.parser.allow_unquoted_control_chars=true
-spring.jackson.parser.allow_single_quotes=true
+spring.jackson.parser.allow_single_quotes=true#限制文件上传大小
+spring.http.multipart.maxFileSize=10Mb
+spring.http.multipart.maxRequestSize=10Mb
 
 
 #配置图片文件上传下载的相关参数，如果此次配置将覆盖数据库系统参数中的 arcImageUploadRootPath 及 arcImageDownloadBaseUri两个参数
@@ -40,19 +42,30 @@ spring.jackson.parser.allow_single_quotes=true
 
 #mdp.auth.ips=ip1,ip2,ip3,授权ip地址列表，如果非授权ip应用只允许使用24小时
 mdp.auth.ips=172.18.153.152
-mdp.auth.qx-regist-url=/sys/sys/sys/qx/autoRegist
-mdp.audit.audit-log-url=/audit/audit/audit/base/operLog/add
+
+mdp.api-gate=http://gate
 mdp.platform-branch-id=platform-branch-001
 
-#限制文件上传大小
-spring.http.multipart.maxFileSize=10Mb
-spring.http.multipart.maxRequestSize=10Mb
+# 权限自动注册接口，云环境下 http://微服务名称/sys/qx/autoRegist，本地调试 http://ip:port/sys/qx/autoRegist
+mdp.auth.qx-regist-url=http://sys/sys/qx/autoRegist
+# 审计日志收集，云环境下 http://微服务名称/audit/base/operLog/add，本地调试 http://ip:port/audit/base/operLog/add
+mdp.audit.audit-log-url=http://audit/audit/base/operLog/add
+# 元数据/系统参数等接口 云环境下 http://微服务名称/sys/meta/itemOption/list/byItemCode，本地调试 http://ip:port/meta/itemOption/list/byItemCode
+mdp.meta.item-options-query-uri= http://sys/meta/itemOption/list/byItemCode
+# 元数据/系统参数等接口 云环境下 http://微服务名称/sys/meta/item/list，本地调试 http://ip:port/meta/item/list
+mdp.meta.items-query-uri= http://sys/meta/item/list
+# 第三方授权登陆参数配置数据访问接口 云环境下 http://微服务名称/app/appTpAuth/list，本地调试 http://ip:port/app/appTpAuth/list
+mdp.tpa.app-tp-auth-query-uri= http://sys/app/appTpAuth/list
+# 第三方授权支付参数配置数据访问接口 云环境下 http://微服务名称/app/appTpPay/list，本地调试 http://ip:port/app/appTpPay/list
+mdp.tpa.app-tp-pay-query-uri= http://sys/app/appTpPay/list
+# 第三方授权登陆登陆用户查询接口 云环境下 http://微服务名称/sys/userTpa/list，本地调试 http://ip:port/sys/userTpa/list
+mdp.tpa.user-tpa-query-uri= http://sys/sys/userTpa/list
 
 
 
-# mdp平台授权验证服务器访问地址 cloud环境下换成 http://gate，本地调试如果不起验证服务器，可改为 https://www.qingqinkj.com/api/m1/oauth2/oauth2
-mdp.oauth2.server.uri=http://172.16.16.16:7000
-# 客户端必须在数据库表adm.oauth_client_details中配置，否则无法访问
+# mdp平台授权验证服务器访问地址 cloud环境下换成 http://oauth2server，本地调试如果不起验证服务器，可改为 https://www.qingqinkj.com/api/m1/oauth2server
+# oauth2client服务比较特殊，oauth2client工程访问oauth2server要通过非cloud方式访问。即http://ip:port/的方式，或者https://www.qingqinkj.com/api/m1/oauth2server
+mdp.oauth2.server.uri= http://oauth2server
 
 # 下面配置 password 模式
 spring.security.oauth2.client.registration.password-client.provider=def-oauth-server
@@ -85,14 +98,6 @@ spring.security.oauth2.client.provider.def-oauth-server.token-uri= ${mdp.oauth2.
 # 资源服务器
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${mdp.oauth2.server.uri}/oauth2/jwks
 
-#配置数据源
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.jdbc-url=jdbc:oracle:thin:@193.112.138.144:1521:KEYUNSITDB
-#spring.datasource.username=root
-#spring.datasource.password=lqaz@WSX
-#spring.datasource.validation-query=select 1
-#spring.datasource.test-on-borrow=true
-#spring.datasource.validation-interval=30000
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
