--- a/xm-core/src/main/resources/application-dev.properties
+++ b/xm-core/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 #内置服务器的端口
 server.port=7067
 spring.application.name=xm
-server.context-path=/${spring.application.name}
+#server.context-path=/${spring.application.name}
 #session失效时间 秒
 server.session.timeout=43200
 spring.session.store-type=redis
@@ -15,17 +15,6 @@ spring.zipkin.base-url=http://111.230.141.161:6019/
 spring.sleuth.sampler.percentage=1.0
 
 
-
-#配置数据源
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.jdbc-url=jdbc:mysql://123.207.117.5:3306/adm?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&serverTimezone=CTTin
-#spring.datasource.username=root
-#spring.datasource.password=lqaz@WSX
-#spring.datasource.validation-query=select 1
-#spring.datasource.test-on-borrow=true
-#spring.datasource.validation-interval=30000
-#spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.Oracle10gDialect
-#spring.jpa.database =ORACLE
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.jdbc-url=jdbc:mysql://123.207.117.5:3306/xm?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&serverTimezone=CTT&allowPublicKeyRetrieval=true
@@ -77,32 +66,47 @@ mdp.ac.account-check-sign=true
 ###end ac##########
 #mdp.auth.ips=ip1,ip2,ip3,授权ip地址列表，如果非授权ip应用只允许使用24小时
 mdp.auth.ips=172.18.153.152
-mdp.auth.qx-regist-url=/sys/sys/sys/qx/autoRegist
-mdp.audit.audit-log-url=/audit/audit/audit/base/operLog/add
+
+
+mdp.api-gate=http://134.175.57.249:7015
 mdp.platform-branch-id=platform-branch-001
 
+# 权限自动注册接口，云环境下 http://微服务名称/sys/qx/autoRegist，本地调试 http://ip:port/sys/qx/autoRegist
+mdp.auth.qx-regist-url=${mdp.api-gate}/sys/sys/qx/autoRegist
+# 审计日志收集，云环境下 http://微服务名称/audit/base/operLog/add，本地调试 http://ip:port/audit/base/operLog/add
+mdp.audit.audit-log-url=${mdp.api-gate}/audit/audit/base/operLog/add
+# 元数据/系统参数等接口 云环境下 http://微服务名称/sys/meta/itemOption/list/byItemCode，本地调试 http://ip:port/meta/itemOption/list/byItemCode
+mdp.meta.item-options-query-uri= ${mdp.api-gate}/sys/meta/itemOption/list/byItemCode
+# 元数据/系统参数等接口 云环境下 http://微服务名称/sys/meta/item/list，本地调试 http://ip:port/meta/item/list
+mdp.meta.items-query-uri= ${mdp.api-gate}//sys/meta/item/list
+# 第三方授权登陆参数配置数据访问接口 云环境下 http://微服务名称/app/appTpAuth/list，本地调试 http://ip:port/app/appTpAuth/list
+mdp.tpa.app-tp-auth-query-uri= ${mdp.api-gate}/sys/app/appTpAuth/list
+# 第三方授权支付参数配置数据访问接口 云环境下 http://微服务名称/app/appTpPay/list，本地调试 http://ip:port/app/appTpPay/list
+mdp.tpa.app-tp-pay-query-uri= ${mdp.api-gate}/sys/app/appTpPay/list
+# 第三方授权登陆登陆用户查询接口 云环境下 http://微服务名称/sys/userTpa/list，本地调试 http://ip:port/sys/userTpa/list
+mdp.tpa.user-tpa-query-uri= ${mdp.api-gate}/sys/sys/userTpa/list
 
 
-# mdp平台授权验证服务器访问地址 cloud环境下换成 http://gate，本地调试如果不起验证服务器，可改为 https://www.qingqinkj.com/api/m1/oauth2/oauth2
+# mdp平台授权验证服务器访问地址 cloud环境下换成 http://oauth2server，本地调试http://127.0.0.1:7000，本地如果不起验证服务器，可改为 https://www.qingqinkj.com/api/m1/oauth2server
 mdp.oauth2.server.uri=http://134.175.57.249:7000
 # 客户端必须在数据库表adm.oauth_client_details中配置，否则无法访问
 
 # 下面配置 password 模式
-spring.security.oauth2.client.registration.password-client.provider=def-oauth-server
+spring.security.oauth2.client.registration.password-client.provider=oauth2server
 spring.security.oauth2.client.registration.password-client.client-id=${spring.application.name}
 spring.security.oauth2.client.registration.password-client.client-secret= ${spring.application.name}-8888
 spring.security.oauth2.client.registration.password-client.authorization-grant-type= password
 spring.security.oauth2.client.registration.password-client.scope= all
 
 # 下面配置 client_credentials 模式
-spring.security.oauth2.client.registration.def-client.provider=def-oauth-server
+spring.security.oauth2.client.registration.def-client.provider=oauth2server
 spring.security.oauth2.client.registration.def-client.client-id=${spring.application.name}
 spring.security.oauth2.client.registration.def-client.client-secret= ${spring.application.name}-8888
 spring.security.oauth2.client.registration.def-client.authorization-grant-type= client_credentials
 spring.security.oauth2.client.registration.def-client.scope= all
 
 # 下面配置authorization_code模式
-spring.security.oauth2.client.registration.code-client.provider=def-oauth-server
+spring.security.oauth2.client.registration.code-client.provider=oauth2server
 spring.security.oauth2.client.registration.code-client.client-id=${spring.application.name}
 spring.security.oauth2.client.registration.code-client.client-secret= ${spring.application.name}-8888
 spring.security.oauth2.client.registration.code-client.authorization-grant-type= authorization_code
@@ -111,9 +115,9 @@ spring.security.oauth2.client.registration.code-client.redirect-uri= ${messages.
 spring.security.oauth2.client.registration.code-client.scope= all
 
 # 授权码方式获取code
-spring.security.oauth2.client.provider.def-oauth-server.authorization-uri= ${mdp.oauth2.server.uri}/oauth2/authorize
+spring.security.oauth2.client.provider.oauth2server.authorization-uri= ${mdp.oauth2.server.uri}/oauth2/authorize
 # 获取token接口
-spring.security.oauth2.client.provider.def-oauth-server.token-uri= ${mdp.oauth2.server.uri}/oauth2/token
+spring.security.oauth2.client.provider.oauth2server.token-uri= ${mdp.oauth2.server.uri}/oauth2/token
 
 # 资源服务器
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${mdp.oauth2.server.uri}/oauth2/jwks
