--- a/xm-bootstrap/src/main/resources/application-dev.properties
+++ b/xm-bootstrap/src/main/resources/application-dev.properties
@@ -42,27 +42,45 @@ mdp.arc.file-upload-root-path=E:/arc/files
 spring.http.multipart.maxFileSize=10Mb
 spring.http.multipart.maxRequestSize=10Mb
 
+mdp.api-gate=http://134.175.57.249:7015
+mdp.platform-branch-id=platform-branch-001
 
-# mdp平台授权验证服务器访问地址 cloud环境下换成 http://gate，本地调试如果不起验证服务器，可改为 https://www.qingqinkj.com/api/m1/oauth2/oauth2
-mdp.oauth2.server.uri=http://134.175.57.249:7000
+# 权限自动注册接口，云环境下 http://微服务名称/sys/qx/autoRegist，本地调试 http://ip:port/sys/qx/autoRegist
+mdp.auth.qx-regist-url=${mdp.api-gate}/sys/sys/qx/autoRegist
+# 审计日志收集，云环境下 http://微服务名称/audit/base/operLog/add，本地调试 http://ip:port/audit/base/operLog/add
+mdp.audit.audit-log-url=${mdp.api-gate}/audit/audit/base/operLog/add
+# 元数据/系统参数等接口 云环境下 http://微服务名称/sys/meta/itemOption/list/byItemCode，本地调试 http://ip:port/meta/itemOption/list/byItemCode
+mdp.meta.item-options-query-uri= ${mdp.api-gate}/sys/meta/itemOption/list/byItemCode
+# 元数据/系统参数等接口 云环境下 http://微服务名称/sys/meta/item/list，本地调试 http://ip:port/meta/item/list
+mdp.meta.items-query-uri= ${mdp.api-gate}//sys/meta/item/list
+# 第三方授权登陆参数配置数据访问接口 云环境下 http://微服务名称/app/appTpAuth/list，本地调试 http://ip:port/app/appTpAuth/list
+mdp.tpa.app-tp-auth-query-uri= ${mdp.api-gate}/sys/app/appTpAuth/list
+# 第三方授权支付参数配置数据访问接口 云环境下 http://微服务名称/app/appTpPay/list，本地调试 http://ip:port/app/appTpPay/list
+mdp.tpa.app-tp-pay-query-uri= ${mdp.api-gate}/sys/app/appTpPay/list
+# 第三方授权登陆登陆用户查询接口 云环境下 http://微服务名称/sys/userTpa/list，本地调试 http://ip:port/sys/userTpa/list
+mdp.tpa.user-tpa-query-uri= ${mdp.api-gate}/sys/sys/userTpa/list
+
+
+# mdp平台授权验证服务器访问地址 cloud环境下换成 http://oauth2server，本地调试http://127.0.0.1:7000，本地如果不起验证服务器，可改为 https://www.qingqinkj.com/api/m1/oauth2server
+mdp.oauth2.server.uri=http://oauth2server
 # 客户端必须在数据库表adm.oauth_client_details中配置，否则无法访问
 
 # 下面配置 password 模式
-spring.security.oauth2.client.registration.password-client.provider=def-oauth-server
+spring.security.oauth2.client.registration.password-client.provider=oauth2server
 spring.security.oauth2.client.registration.password-client.client-id=${spring.application.name}
 spring.security.oauth2.client.registration.password-client.client-secret= ${spring.application.name}-8888
 spring.security.oauth2.client.registration.password-client.authorization-grant-type= password
 spring.security.oauth2.client.registration.password-client.scope= all
 
 # 下面配置 client_credentials 模式
-spring.security.oauth2.client.registration.def-client.provider=def-oauth-server
+spring.security.oauth2.client.registration.def-client.provider=oauth2server
 spring.security.oauth2.client.registration.def-client.client-id=${spring.application.name}
 spring.security.oauth2.client.registration.def-client.client-secret= ${spring.application.name}-8888
 spring.security.oauth2.client.registration.def-client.authorization-grant-type= client_credentials
 spring.security.oauth2.client.registration.def-client.scope= all
 
 # 下面配置authorization_code模式
-spring.security.oauth2.client.registration.code-client.provider=def-oauth-server
+spring.security.oauth2.client.registration.code-client.provider=oauth2server
 spring.security.oauth2.client.registration.code-client.client-id=${spring.application.name}
 spring.security.oauth2.client.registration.code-client.client-secret= ${spring.application.name}-8888
 spring.security.oauth2.client.registration.code-client.authorization-grant-type= authorization_code
@@ -71,9 +89,9 @@ spring.security.oauth2.client.registration.code-client.redirect-uri= ${messages.
 spring.security.oauth2.client.registration.code-client.scope= all
 
 # 授权码方式获取code
-spring.security.oauth2.client.provider.def-oauth-server.authorization-uri= ${mdp.oauth2.server.uri}/oauth2/authorize
+spring.security.oauth2.client.provider.oauth2server.authorization-uri= ${mdp.oauth2.server.uri}/oauth2/authorize
 # 获取token接口
-spring.security.oauth2.client.provider.def-oauth-server.token-uri= ${mdp.oauth2.server.uri}/oauth2/token
+spring.security.oauth2.client.provider.oauth2server.token-uri= ${mdp.oauth2.server.uri}/oauth2/token
 
 # 资源服务器
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${mdp.oauth2.server.uri}/oauth2/jwks
