增加mdp模块扫码

--- a/xm-bootstrap/src/main/resources/application-m1prod.properties
+++ b/xm-bootstrap/src/main/resources/application-m1prod.properties
@@ -30,7 +30,9 @@ spring.jackson.serialization.indent_output=true
 spring.jackson.serialization.fail_on_empty_beans=false
 spring.jackson.deserialization.fail_on_unknown_properties=false
 spring.jackson.parser.allow_unquoted_control_chars=true
-spring.jackson.parser.allow_single_quotes=true#限制文件上传大小
+spring.jackson.parser.allow_single_quotes=true
+
+#限制文件上传大小
 spring.http.multipart.maxFileSize=10Mb
 spring.http.multipart.maxRequestSize=10Mb
 
@@ -60,8 +62,6 @@ mdp.tpa.app-tp-auth-query-uri= http://sys/app/appTpAuth/list
 mdp.tpa.app-tp-pay-query-uri= http://sys/app/appTpPay/list
 # 第三方授权登陆登陆用户查询接口 云环境下 http://微服务名称/sys/userTpa/list，本地调试 http://ip:port/sys/userTpa/list
 mdp.tpa.user-tpa-query-uri= http://sys/sys/userTpa/list
-
-
 
 # mdp平台授权验证服务器访问地址 cloud环境下换成 http://oauth2server，本地调试如果不起验证服务器，可改为 https://www.qingqinkj.com/api/m1/oauth2server
 # oauth2client服务比较特殊，oauth2client工程访问oauth2server要通过非cloud方式访问。即http://ip:port/的方式，或者https://www.qingqinkj.com/api/m1/oauth2server
@@ -98,8 +98,6 @@ spring.security.oauth2.client.provider.def-oauth-server.token-uri= ${mdp.oauth2.
 # 资源服务器
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${mdp.oauth2.server.uri}/oauth2/jwks
 
-
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.jdbc-url=jdbc:mysql://10.0.0.5:3306/xm?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&serverTimezone=CTT
 spring.datasource.username=root
@@ -121,7 +119,7 @@ mdp.topMech.accountId=m1000
 mdp.sms.appid=1400038813
 mdp.sms.app-secret=4b0659a2ee8ba4e54a570515fda94aef
 
- # REDIS (RedisProperties)
+# REDIS (RedisProperties)
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器地址
