--- a/xm-bootstrap/src/main/resources/application.properties
+++ b/xm-bootstrap/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## 开发/测试/生产环境分别对应devqianqin/test/prodqianqin
-spring.profiles.active=dev
+spring.profiles.active=m1prod
 
 #配置mybatis
 mybatis.config-location=classpath:/mybatis/mybatis-config.xml
