--- a/xm-bootstrap/src/main/resources/application-m1prod.properties
+++ b/xm-bootstrap/src/main/resources/application-m1prod.properties
@@ -5,7 +5,7 @@ server.port=7067
 #server.context-path=/${spring.application.name}
 #session失效时间 秒
 server.session.timeout=43200
-spring.session.store-type=none
+spring.session.store-type=redis
 spring.cloud.inetutils.preferredNetworks[0]=^10\.
 spring.cloud.inetutils.preferredNetworks[1]=^172\.
 #eureka.client.serviceUrl.defaultZone=http://172.16.16.16:6110/eureka/
