添加修改任务时间的单独接口

--- a/xm-bootstrap/src/main/resources/application-m1.xm.prod.1.0.properties
+++ b/xm-bootstrap/src/main/resources/application-m1.xm.prod.1.0.properties
@@ -2,7 +2,7 @@
 spring.application.name=xm
 server.port=7067
 # 默认情况下为 spring.application.name + server.port, 如果在多个服务器上同一个服务, 因为应用名和端口都一致, 会导致service id 会重复, 所以一般情况都需要引入一个随机数避免重复 .
-spring.cloud.consul.discovery.instance-id=${spring.application.name}-${server.port}-${random.value}
+# spring.cloud.consul.discovery.instance-id=${spring.application.name}-${server.port}-${random.value}
 
 #server.context-path=/${spring.application.name}
 #session失效时间 秒
