--- a/xm-core/src/main/resources/application.properties
+++ b/xm-core/src/main/resources/application.properties
@@ -23,4 +23,6 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html 
 spring.thymeleaf.cache=false
+
+swagger2.enable=true
  
