--- a/xm-bootstrap/src/main/resources/application.properties
+++ b/xm-bootstrap/src/main/resources/application.properties
@@ -6,7 +6,7 @@ mybatis.config-location=classpath:/mybatis/mybatis-config.xml
 mybatis.mapperLocations=classpath*:/mybatis/mapper/**/*.xml
 
 #配置日志
-logging.level.root=debug
+logging.level.root=info
 
  
 
