--- a/xm-core/src/main/resources/application-dev.yml
+++ b/xm-core/src/main/resources/application-dev.yml
@@ -202,7 +202,7 @@ spring:
           #password: zchcgl123!@#
           #driver-class-name: com.mysql.cj.jdbc.Driver
 
-          url: jdbc:mysql://123.207.117.5:3306/adm?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&serverTimezone=CTT
+          url: jdbc:mysql://123.207.117.5:3306/xm?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&serverTimezone=CTT
           username: root
           password: 1qaz@WSX
           driver-class-name: com.mysql.cj.jdbc.Driver
