--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>com.mdp</groupId>
     <artifactId>mdp-products</artifactId>
-    <version>M.1.0.0-RELEASE</version>
+    <version>2.0.0-RELEASE</version>
   </parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
