--- a/xm-bootstrap/pom.xml
+++ b/xm-bootstrap/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.xm</groupId>
         <artifactId>xm-backend</artifactId>
-        <version>M.1.0.0-RELEASE</version>
+        <version>2.0.0-RELEASE</version>
     </parent>
   <dependencies>
       <dependency>
