--- a/xm-cloud-bootstrap/pom.xml
+++ b/xm-cloud-bootstrap/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>xm-bootstrap</artifactId>
   <packaging>jar</packaging>
-  <name>xm-bootstrap 唛盟云-项目管理系统服务端单体应用启动器</name>
+  <name>xm-bootstrap 唛盟云-项目管理系统服务端cloud启动器</name>
     <parent>
         <groupId>com.xm</groupId>
         <artifactId>xm-backend</artifactId>
@@ -12,13 +12,18 @@
     </parent>
   <dependencies>
       <dependency>
+          <groupId>com.xm</groupId>
+          <artifactId>xm-core</artifactId>
+      </dependency>
+      <dependency>
           <groupId>com.mdp</groupId>
-          <artifactId>mdp-boot-starter</artifactId>
+          <artifactId>mdp-oauth2-client-cloud</artifactId>
           <version>${mdp.version}</version>
       </dependency>
       <dependency>
-          <groupId>com.xm</groupId>
-          <artifactId>xm-core</artifactId>
+          <groupId>com.mdp</groupId>
+          <artifactId>mdp-cloud-starter</artifactId>
+          <version>${mdp.version}</version>
       </dependency>
   </dependencies>
   <build>
