解决候选人更新不成功问题

--- a/xm-cloud-bootstrap/pom.xml
+++ b/xm-cloud-bootstrap/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>xm-bootstrap</artifactId>
+  <artifactId>xm-cloud-bootstrap</artifactId>
   <packaging>jar</packaging>
-  <name>xm-bootstrap 唛盟云-项目管理系统服务端cloud启动器</name>
+  <name>xm-cloud-bootstrap 唛盟云-项目管理系统服务端cloud启动器</name>
     <parent>
         <groupId>com.xm</groupId>
         <artifactId>xm-backend</artifactId>
