--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 	<modules>
 		<module>xm-core</module>
 		<module>xm-bootstrap</module>
+		<module>xm-cloud-bootstrap</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
