--- a/xm-core/pom.xml
+++ b/xm-core/pom.xml
@@ -30,6 +30,11 @@
 			<version>${mdp.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.mdp</groupId>
+			<artifactId>mdp-oauth2-client</artifactId>
+			<version>${mdp.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>net.coobird</groupId>
 			<artifactId>thumbnailator</artifactId>
 			<version>0.4.8</version>
